# sketch-vectorization

./: .gitignore  README.md  architecture.md  nbconv.py  pyproject.toml  setup.py
notebooks/: work.ipynb  work.py
src/bez/: segments.py
src/meta/: __init__.py
src/sketch_bezier.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
