[project]
name = "sketch-bezier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "numpy>=2.2.5",
    "pillow>=11.2.1",
    "scikit-image>=0.25.2",
    "scipy>=1.15.2",
]

[build-system]
requires = ["setuptools"]
